extract method to ease testing